one80/static/css/style.css
/* ... */
label, input[type="button"], input[type="submit"], input[type="image"], button { cursor: pointer; }
button, input, select, textarea { margin: 0; }
input:valid, textarea:valid   {  }
input:invalid, textarea:invalid { border-radius: 1px; -moz-box-shadow: 0px 0px 5px red; -webkit-box-shadow: 0px 0px 5px red; box-shadow: 0px 0px 5px red; }
.no-boxshadow input:invalid, .no-boxshadow textarea:invalid { background-color: #f0dddd; }

::-moz-selection{ background: #456f74; color: #e5e2db; text-shadow: none; }
::selection { background:#456f74; color: #e5e2db; text-shadow: none; }
a:link { -webkit-tap-highlight-color: #456f74; }
button {  width: auto; overflow: visible; }
.ie7 img { -ms-interpolation-mode: bicubic; }

.main a:link, .list_columns a:link, .tagged_names a:link, .tables a:link {text-decoration: none; outline: none; color: #456f74;}
.list_view-all a:link, .tagged_hearings a:link, .bulleted a:link, .hearing-date a:link, .hearing-tags a:link, .committee-sm a:link, .grid_sub a:link {color: #456f74; color: rgba(69,111,116,0.65); text-decoration: none;}
.main a:visited {color: #456f74;}
.list_columns a:hover, .tagged_names a:hover, .recent_hearings a:hover, .list_hearing a:hover, .tables a:hover, .rid_names a:hover, .list_committee a:hover {color: #ee603d; border-bottom: 1px dotted rgba(238,96,61,0.5); border-bottom-color:#ff603d; border-bottom-color:rgba(238,96,61,0.5);}
.list_view-all a:hover, .tagged_hearings a:hover, .bulleted a:hover, .hearing-date a:hover, .hearing-tags a:hover, .grid_sub a:hover {color: #456F74; border-bottom: none;}
#header_nav a:focus, .main a:focus, footer a:focus, button:focus {background-color: #000; background-color: rgba(0,0,0,0.02);outline: 1px dotted rgba(0,0,0,0.25);}

.clear { clear: both; }

.clearfix:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}

.replace { text-indent: -9999em; display: block; }
.none { background:none !important; }
p { margin-bottom: 1.5em;}


.messages { margin-bottom: 20px; }

.messages li {
    color: #444;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    padding: 5px 10px;
}

.messages .error, .messages .warning {
    border: 2px solid #c73924;
    background-color: #f9bd98;
}

.messages .success {
    border: 2px solid #beca05;
    background-color: #eff4e7;
}

ol, ul {
    list-style-type: none;
    margin-left: 0;
}

body {
    color: #9C998F;
    background: #33383a;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 13px;
    line-height: 17px;
}

#content { background-color: #fff; margin: 0 auto; padding: 30px 30px 0; width: 890px; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
.list_col-left { width: 360px; margin-right: 30px; float: left; margin-top: 40px;}
#list_col-right { width: 500px; float: left; margin-top: 40px; }

.module { margin-bottom: 30px;}

/* headers */

h2 { color: #403D3C; font-family: "futura-pt", "Helvetica", Arial, sans-serif; font-size: 260%; margin-bottom: 25px; line-height: 35px;}
h3 { color: #403D3C; font-family: "futura-pt", "Helvetica", Arial, sans-serif; font-size: 170%; font-weight: 500; margin-bottom: 25px; line-height: 25px;}
h4 { font-size: 140%; font-weight: bold; margin-bottom: 15px; line-height: 23px; }
h5 { font-size: 120%; text-transform: uppercase; font-weight: bold; margin-bottom: 10px;}

.withTip { margin-bottom: 10px;}

/*header*/

#banner_logo { width: 126px; height: 38px; background: url('../images/logo_sunlight.png') top right no-repeat; float: right;}

header { margin: 0 auto; background: url(../images/bg_header.jpg) center top no-repeat; width: 890px; padding: 7px 40px; height: 153px;}
h1 { padding: 35px 0 0 0; float: left; width: 337px; height: 68px;}
h1 a {  background: url('../images/logo.png') top left no-repeat; width: 337px; height: 68px; }

#header_nav { width: 261px; padding: 35px 0 0 0; float: right; }
#header_nav li { float: right; }

#button_search { background: url('../images/btn_go.png') top left no-repeat; width: 62px; height: 28px; border: none; float: right;}
#button_search:hover { background: url('../images/btn_go.png') bottom left no-repeat;}
#input_search { width: 175px; font-size: 14px; margin: 1px 0 0 0; padding: 4px 5px 5px; float: left; background-color: #fff;}
#form_search-site { width: 260px; margin: 20px 0 0 0; }
#form_search-site label { display: none; }

#subnav .list_nav { margin: 0 auto; width: 150px;}
.list_nav li { font-family: "futura-pt", "Helvetica", Arial, sans-serif; font-size: 14px; font-weight: 500; padding: 0 10px; border-right: 1px dotted #A3948F; }
#link_signup, #link_account, #link_contact { border-right: none; }

#link_account a { width: 21px; height: 21px; background: url('../images/sprite_account.png') top left no-repeat; margin: -3px 0 0 0; }
#link_account a:hover { width: 21px; height: 21px; background: url('../images/sprite_account.png') bottom left no-repeat; }

/* home page */
#feature { margin-bottom: 10px;}
#content #feature img { float: left; padding: 0; border: none;}
#feature span { font-size: 120%; color: #fff; line-height: 24px;}
#feature h2 { background: url(../images/title_homeFeature.png) top left no-repeat; width: 230px; height: 144px;}
#featureOverlay { position: absolute; padding: 60px 30px; width: 250px; }

.list_col-wrapper { width: 265px; padding: 0 15px; margin: 20px 0 0 0; float: left; }
.list_col-wrapper h3 { border-bottom: 1px dashed #D4CFCB; padding-bottom: 4px;}

.list_columns a { font-size: 15px; line-height: 18px; display: block; }
.wrapper-img-gallery .list_columns a {float:left;}
.wrapper-img-gallery .list_columns span.list_title,
.wrapper-img-galelry .list_columns span.list_employer {display:block;clear:left;}
.list_columns li { margin-bottom: 20px; }

#startBtn { background: url(../images/btn_start.png) top left no-repeat; width: 235px; height: 53px; margin-top: 20px;}
#startBtn:hover { background: url(../images/btn_start.png) bottom left no-repeat; }
/* ... */

